[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Textures/colour theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/pause_menu/pause_menu.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
scene_to_load = "res://UI/Desktop/Main Menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 100 )
custom_constants/separation = 10

[node name="PAUSED" type="Label" parent="VBoxContainer"]
margin_right = 130.0
margin_bottom = 14.0
text = "PAUSED"
align = 1

[node name="resume game" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 130.0
margin_bottom = 55.0
theme = ExtResource( 1 )
text = "Resume Game "

[node name="Main Menu Button" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 130.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "Return to Main Menu"

[node name="quit game" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 130.0
margin_bottom = 137.0
theme = ExtResource( 1 )
text = "Quit Game "

[connection signal="pressed" from="VBoxContainer/resume game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu Button" to="." method="_on_Main_Menu_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit game" to="." method="_on_quit_game_pressed"]
